JG-2003-02-18-0  Cleanup:   Created separate messages files for the new libs
                            libevc, libevm and libmir.
                            Updated ADOC docs for these libs.

EB-2003-02-18-0  Testsuite: Added new test for issue #314
                 Review:    CR

EB-2003-02-18-0  Testsuite: Added missing test for issue #226
                 Review:    CR

JG-2003-02-17-0  Enhancem.  Created new libraries:
                            - libevc (event client code)
                            - libevm (event master code)
                            - libmir (mirror code)
                 Issue:     #466
                 Review:    EB

EB-2003-02-17-0  Bugfix:    qhost -q -l arch=xx crashes if a grid execution 
                            host is down
                 Issue:     #492
                 Bugtraq:   #4819479
                 Review:    JG
                 Changed:   qhost

JG-2003-02-14-0  Bugfix:    Second migration of tightly integrated jobs failed
                            if any host was used in both the first and second
                            run of the job.
                 Review:    EB
                 Changed:   sge_qmaster

CR-2003-02-14-3  Teststuie: comment from change by CR-2003-02-14-2 caused
                 Bugfix:    tcl error. 

CR-2003-02-14-2  Testsuite: fixed bug in get_ps_info() which caused qrsh test
                            to fail
                 Bugfix:

CR-2003-02-14-1  Testsuite: throughput test now sets maxujobs parameter
                            in scheduler configuration 

EB-2003-02-14-1  Testsuite: new test which will find #226
                 Issue:     #364

CR-2003-02-14-0  Bugfix:    changed not unique message id

JG-2003-02-13-1  Bugfix:    Fixed broken build for aimk -shared-libs for all
                            architectures except aix

EB-2003-02-13-0  Enhancem.: Merged code form Branch
                            Resolved conflict libgdi <-> ligsgeobj
