@@ -1,0 +1,132 @@
+#!/vol2/TCL_TK/glinux/bin/expect
+#___INFO__MARK_BEGIN__
+##########################################################################
+#
+#  The Contents of this file are made available subject to the terms of
+#  the Sun Industry Standards Source License Version 1.2
+#
+#  Sun Microsystems Inc., March, 2001
+#
+#
+#  Sun Industry Standards Source License Version 1.2
+#  =================================================
+#  The contents of this file are subject to the Sun Industry Standards
+#  Source License Version 1.2 (the "License"); You may not use this file
+#  except in compliance with the License. You may obtain a copy of the
+#  License at http://gridengine.sunsource.net/Gridengine_SISSL_license.html
+#
+#  Software provided under this License is provided on an "AS IS" basis,
+#  WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING,
+#  WITHOUT LIMITATION, WARRANTIES THAT THE SOFTWARE IS FREE OF DEFECTS,
+#  MERCHANTABLE, FIT FOR A PARTICULAR PURPOSE, OR NON-INFRINGING.
+#  See the License for the specific provisions governing your rights and
+#  obligations concerning the Software.
+#
+#  The Initial Developer of the Original Code is: Sun Microsystems, Inc.
+#
+#  Copyright: 2001 by Sun Microsystems, Inc.
+#
+#  All Rights Reserved.
+#
+##########################################################################
+#___INFO__MARK_END__
+
+# define global variable in this namespace
+global check_name 
+global check_category
+global check_description 
+global check_needs
+global check_functions 
+global check_errno 
+global check_errstr 
+global check_highest_level
+global check_init_level_procedure
+global check_root_access_needs
+global env
+
+# set check_root_access_needs "yes"
+
+
+# define a level initialization procedure:
+set check_init_level_procedure "issue_403_init_level"
+
+# define test's name and run level descriptions
+set check_name            "issue_403"
+set check_category        "COMPATIBILITY SYSTEM L10N"
+set check_highest_level   0
+set check_description(0)  "check valid gid range parameters"
+
+# define test's dependencies
+set check_needs           "init_core_system" 
+
+
+# define test's procedure order
+set check_functions ""
+lappend check_functions "issue_403_setup"
+lappend check_functions "issue_403_check"
+lappend check_functions "issue_403_cleanup"
+
+proc issue_403_init_level {} {
+   global CHECK_ACT_LEVEL
+   global CHECK_PRODUCT_TYPE
+   global test_array_jobs 
+
+  switch -- $CHECK_ACT_LEVEL {
+     "0" { 
+           return 0    
+     } 
+     "1" {
+           return -1
+     }
+  } 
+  return -1  ;# no other level else
+}
+
+# -------- local test procedures -----------------------------------------------
+
+proc issue_403_setup  {} {
+   global CHECK_OUTPUT 
+   global CHECK_CORE_MASTER
+
+   set_error 0 "ok"
+}
+
+
+proc issue_403_check {} {
+   global CHECK_OUTPUT CHECK_PRODUCT_ROOT CHECK_ARCH CHECK_HOST CHECK_USER
+   global ts_config 
+
+   set priority "-2"
+   set p_option "-p $priority"
+   set the_command "-h $CHECK_PRODUCT_ROOT/examples/jobs/sleeper.sh 3600"
+
+   # try to submit one job using a colon in account string
+   set qsub_arguments "$the_command"
+   set job_id [submit_job $qsub_arguments 1]
+
+   if { ( [ string compare $ts_config(dns_for_install_script) "none" ] == 0 ) } {
+      set the_hostname "${CHECK_HOST}.$ts_config(dns_domain)"
+   } else {
+      set the_hostname "${CHECK_HOST}"
+   }
+   set EXPECTED_MESSAGE [translate $CHECK_HOST 1 0 0 [sge_macro MSG_JOB_PRIOSET_SSUI] "$CHECK_USER" "$the_hostname" "$job_id" "$priority"]
+   set qalterresult [ catch { eval exec "$CHECK_PRODUCT_ROOT/bin/$CHECK_ARCH/qalter $p_option $job_id" } qalteroutput ]
+
+   if { ( [ string compare $qalterresult $EXPECTED_MESSAGE ] == 0 ) } {
+      add_proc_error "issue_314_check" "-1" \
+                     "Success message of qalter -p <neg> priority shows wrong msg."
+      return
+   }
+
+   # delete the submitted job
+   delete_job $job_id "1"
+
+   set_error 0 "ok"
+}
+
+proc issue_403_cleanup  {} {
+   global CHECK_OUTPUT CHECK_PRODUCT_ROOT CHECK_ARCH CHECK_CORE_MASTER
+
+   set_error 0 "ok"
+}
+
